Fixed message's overflowing text content

--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -46,7 +46,7 @@ body {
     border: 1px solid black;
     border-radius: 0.5rem;
     height: 100%;
-    text-align: right;
+    /* text-align: right; */
     /* padding-right: 20px; */
     display: block;
     overflow-y: auto;
